# pycamilladsp-plot

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
camilladsp_plot/: __init__.py  audiofileread.py  cooley_tukey.py  eval_filterconfig.py  filter_eval.py  filters.py  plot_filters.py  plot_pipeline.py  plotcamillaconf.py  validate_config.py  validate_sections.py
camilladsp_plot/schemas/: basicfilters.json  biquadcombo.json  biquads.json  capture.json  compressor.json  conv.json  devices.json  diffeq.json  dither.json  filter.json  mixer.json  mixermapping.json  mixersource.json  noisegate.json  pipeline.json  playback.json  processor.json  race.json  sections.json
tests/: test_devices_validation.py  test_filter_evaluation.py  test_filter_validation.py  test_filtereval.py  test_pipeline_validation.py
